objects/Task__c.object
<CustomObject>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>is_Timer_On__c</fullName>
        <label>is Timer On</label>
        <summaryFilterItems>
            <field>Time_Entry__c.is_Timer_active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Entry__c.Task__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>